# palace-autotesting

./: pyproject.toml  tox.ini
autotests/: __init__.py
autotests/pages/: admin_home.py  admin_login.py
tests/: test_home_page.py
